// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage component should be rendered correctly with app infos from registry (not installed) 1`] = `
<div>
  <div
    className="sto-app"
  >
    <DefaultButton
      className="sto-app-back"
      icon="back"
      label="Back to the list"
      subtle={true}
      tag={[Function]}
      to="/myapps"
    />
    <Wrapper
      description="Gestionnaire de photos pour Cozy v3"
      icon="https://mockcozy.cc/registry/photos/icon"
      iconToLoad={undefined}
      installed={false}
      installedAppLink={null}
      maintenance={undefined}
      name="Photos"
      namePrefix="Cozy"
      parent="/myapps"
      slug="photos"
      type="webapp"
      uninstallable={undefined}
    />
    <withRouter(Wrapper)
      app={
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "icon": "https://mockcozy.cc/registry/photos/icon",
          "installed": false,
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "related": null,
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "https://github.com/cozy/cozy-drive.git@build-photos",
          "type": "webapp",
          "version": "3.0.0",
        }
      }
      changes="### NEW!!!

 Now on the cozy-store :tada"
      description="### Features

Enjoy features to grab your data in you Cozy :tada:"
      mobileApps={
        Array [
          Object {
            "type": "ios",
            "url": "",
          },
          Object {
            "type": "android",
            "url": "https://mock.app",
          },
        ]
      }
      parent="/myapps"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with konnector infos from registry (not installed) 1`] = `
<div>
  <div
    className="sto-app"
  >
    <DefaultButton
      className="sto-app-back"
      icon="back"
      label="Back to the list"
      subtle={true}
      tag={[Function]}
      to="/myapps"
    />
    <Wrapper
      description="A konnector for trinlane"
      icon="https://mockcozy.cc/registry/konnector-trinlane/icon"
      iconToLoad={undefined}
      installed={false}
      installedAppLink={undefined}
      maintenance={undefined}
      name="Trinlane"
      namePrefix={undefined}
      parent="/myapps"
      slug="konnector-trinlane"
      type="konnector"
      uninstallable={undefined}
    />
    <withRouter(Wrapper)
      app={
        Object {
          "categories": Array [
            "transport",
          ],
          "dataType": Array [
            "bill",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "fields": Object {
            "advancedFields": Object {
              "folderPath": Object {
                "advanced": true,
                "isRequired": false,
              },
            },
            "login": Object {
              "type": "text",
            },
            "password": Object {
              "type": "password",
            },
          },
          "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
          "installed": false,
          "langs": Array [
            "fr",
            "en",
          ],
          "locales": Object {
            "en": Object {
              "description": "Fetch all your trainline bills",
              "permissions": Object {
                "accounts": Object {
                  "description": "Required to get the account's data",
                },
                "bank operations": Object {
                  "description": "Required to link bills to bank operations",
                },
                "bills": Object {
                  "description": "Required to save the bills data",
                },
                "files": Object {
                  "description": "Required to save the bills",
                },
              },
            },
            "fr": Object {
              "description": "Récupère toutes vos factures Trainline",
              "permissions": Object {
                "accounts": Object {
                  "description": "Utilisé pour obtenir les données du compte",
                },
                "bank operations": Object {
                  "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                },
                "bills": Object {
                  "description": "Utilisé pour sauvegarder les données de facturation",
                },
                "files": Object {
                  "description": "Utilisé pour sauvegarder les factures",
                },
              },
            },
          },
          "name": "Trinlane",
          "permissions": Object {
            "accounts": Object {
              "description": "Required to get the account's data",
              "type": "io.cozy.accounts",
              "verbs": Array [
                "GET",
              ],
            },
            "bank operations": Object {
              "description": "Required to link bills to bank operations",
              "type": "io.cozy.bank.operations",
            },
            "bills": Object {
              "description": "Required to save the bills data",
              "type": "io.cozy.bills",
            },
            "files": Object {
              "description": "Required to save the bills",
              "type": "io.cozy.files",
            },
          },
          "short_description": "A konnector for trinlane",
          "slug": "konnector-trinlane",
          "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
          "type": "konnector",
          "vendorLink": "www.trinlane.fr",
        }
      }
      changes={undefined}
      description={undefined}
      mobileApps={undefined}
      parent="/myapps"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with provided installed app 1`] = `
<div>
  <div
    className="sto-app"
  >
    <DefaultButton
      className="sto-app-back"
      icon="back"
      label="Back to the list"
      subtle={true}
      tag={[Function]}
      to="/myapps"
    />
    <Wrapper
      description="Gestionnaire de photos pour Cozy v3"
      icon="https://mockcozy.cc/registry/photos/icon"
      iconToLoad={undefined}
      installed={true}
      installedAppLink="https://photos.mockcozy.cc"
      maintenance={undefined}
      name="Photos"
      namePrefix="Cozy"
      parent="/myapps"
      slug="photos"
      type="webapp"
      uninstallable={undefined}
    />
    <withRouter(Wrapper)
      app={
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "icon": "https://mockcozy.cc/registry/photos/icon",
          "installed": true,
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "related": "https://photos.mockcozy.cc",
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "https://github.com/cozy/cozy-drive.git@build-photos",
          "type": "webapp",
          "version": "3.0.0",
        }
      }
      changes="### NEW!!!

 Now on the cozy-store :tada"
      description="### Features

Enjoy features to grab your data in you Cozy :tada:"
      mobileApps={
        Array [
          Object {
            "type": "ios",
            "url": "",
          },
          Object {
            "type": "android",
            "url": "https://mock.app",
          },
        ]
      }
      parent="/myapps"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with provided installed konnector 1`] = `
<div>
  <div
    className="sto-app"
  >
    <DefaultButton
      className="sto-app-back"
      icon="back"
      label="Back to the list"
      subtle={true}
      tag={[Function]}
      to="/myapps"
    />
    <Wrapper
      description="A konnector for trinlane"
      icon="https://mockcozy.cc/registry/konnector-trinlane/icon"
      iconToLoad={undefined}
      installed={true}
      installedAppLink={undefined}
      maintenance={undefined}
      name="Trinlane"
      namePrefix={undefined}
      parent="/myapps"
      slug="konnector-trinlane"
      type="konnector"
      uninstallable={undefined}
    />
    <withRouter(Wrapper)
      app={
        Object {
          "categories": Array [
            "transport",
          ],
          "dataType": Array [
            "bill",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "fields": Object {
            "advancedFields": Object {
              "folderPath": Object {
                "advanced": true,
                "isRequired": false,
              },
            },
            "login": Object {
              "type": "text",
            },
            "password": Object {
              "type": "password",
            },
          },
          "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
          "installed": true,
          "langs": Array [
            "fr",
            "en",
          ],
          "locales": Object {
            "en": Object {
              "description": "Fetch all your trainline bills",
              "permissions": Object {
                "accounts": Object {
                  "description": "Required to get the account's data",
                },
                "bank operations": Object {
                  "description": "Required to link bills to bank operations",
                },
                "bills": Object {
                  "description": "Required to save the bills data",
                },
                "files": Object {
                  "description": "Required to save the bills",
                },
              },
            },
            "fr": Object {
              "description": "Récupère toutes vos factures Trainline",
              "permissions": Object {
                "accounts": Object {
                  "description": "Utilisé pour obtenir les données du compte",
                },
                "bank operations": Object {
                  "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                },
                "bills": Object {
                  "description": "Utilisé pour sauvegarder les données de facturation",
                },
                "files": Object {
                  "description": "Utilisé pour sauvegarder les factures",
                },
              },
            },
          },
          "name": "Trinlane",
          "permissions": Object {
            "accounts": Object {
              "description": "Required to get the account's data",
              "type": "io.cozy.accounts",
              "verbs": Array [
                "GET",
              ],
            },
            "bank operations": Object {
              "description": "Required to link bills to bank operations",
              "type": "io.cozy.bank.operations",
            },
            "bills": Object {
              "description": "Required to save the bills data",
              "type": "io.cozy.bills",
            },
            "files": Object {
              "description": "Required to save the bills",
              "type": "io.cozy.files",
            },
          },
          "short_description": "A konnector for trinlane",
          "slug": "konnector-trinlane",
          "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
          "type": "konnector",
          "vendorLink": "www.trinlane.fr",
        }
      }
      changes={undefined}
      description={undefined}
      mobileApps={undefined}
      parent="/myapps"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should render correctly a spinner if isFetching 1`] = `
<div
  className="sto-app"
>
  <Wrapper
    loadingType="appsFetching"
    middle={true}
    size="xxlarge"
  />
</div>
`;

exports[`ApplicationPage component should render correctly an error message if fetchError 1`] = `
<p
  className="u-error"
>
  Something went wrong when fetching the application informations. Reason: This is a test error
</p>
`;
